Add route to list bots for a user
